Basic MCDU Templating - Base page rendering now. - need some kind of CSS magic for right column to be right aligned - need to fix font sizing - need some way to keep display monoscoped despite font size

--- a/src/BasePage/styles.scss
+++ b/src/BasePage/styles.scss
@@ -4,7 +4,7 @@
 //  font-weight: normal;
 //  font-style: normal;
 //}
-
+@import url('../Fonts/A32NX_Display_Common.css');
 @font-face {
   font-family: "ECAMFontRegular";
   src: url("../Fonts/ECAMFontRegular.ttf") format("truetype");
@@ -14,51 +14,51 @@
 
 .bg {
   fill: var(--displayBackground);
-  width: 1024px;
-  height: 1024px;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
-.text {
-  font-family: "ECAMFontRegular" !important;
+rect {
+  fill: var(--displayBackground);
+}
 
-  &__big {
-    &__left {
-      position: absolute;
-      left: 4%;
-      text-align: left;
-      &__label {
-        left: 8%;
-      }
-    }
-    &__right {
-      position: absolute;
-      right: 4%;
-      text-align: right;
-      &__label {
-        right: 8%;
-      }
+text {
+  font-family: "ECAMFontRegular" !important;
+  fill: var(--mcduWhite);
+}
+
+.big {
+  &__left {
+    left: 4%;
+    text-align: left;
+    &__label {
+      left: 8%;
     }
   }
+  &__right {
+    right: 4%;
+    text-align: right;
+    &__label {
+      right: 8%;
+    }
+  }
+}
+
+.left {
   &__small {
-    font-size: 4.2vw;
-    &__left {
-      position: absolute;
-      left: 4%;
-      text-align: left;
-      &__label {
-        left: 8%;
-      }
-    }
-    &__right {
-      position: absolute;
-      right: 4%;
-      text-align: right;
-      &__label {
-        right: 8%;
-      }
-    }
+    font-size: 16px;
+  }
+  &__big {
+    font-size: 20px;
+  }
+}
+
+.right {
+  &__small {
+    font-size: 16px;
+  }
+  &__big {
+    font-size: 20px;
   }
 }
 
